--- a/index.html
+++ b/index.html
@@ -1,133 +1,134 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Higor iPhones - Compre seu Smartphone</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Higor iPhones</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Baskerville&display=swap');
+    @font-face {
+      font-family: 'Helvetica Now Condensed';
+      src: local('Helvetica Now Condensed');
+    }
+
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #000;
+      font-family: 'Helvetica Now Condensed', 'Baskerville', sans-serif;
+      background-color: #ffffff;
+      color: #000000;
     }
 
     header {
-      display: flex;
-      align-items: center;
-      padding: 10px 20px;
       background-color: #000;
       color: #fff;
-    }
-
-    header img {
-      height: 30px;
-      margin-right: 10px;
-    }
-
-    .container {
-      padding: 20px;
-    }
-
-    .title-section {
-      background-color: #f2f2f2;
-      padding: 20px;
-      text-align: center;
-      border-radius: 10px;
-    }
-
-    .title-section h2 {
-      color: #000;
-      margin-bottom: 10px;
-    }
-
-    .form-section {
-      background-color: #e6e6e6;
-      padding: 20px;
-      margin-top: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
-
-    select {
       padding: 10px;
-      width: 100%;
-      font-size: 16px;
+      text-align: center;
+      font-size: 24px;
     }
 
-    .steps {
-      margin-top: 40px;
+    section {
+      padding: 20px;
       text-align: center;
     }
 
-    .step {
-      margin-bottom: 30px;
+    h1, h2 {
+      color: #000;
+      font-family: 'Baskerville', serif;
     }
 
-    .step img {
-      height: 60px;
+    select, button {
+      padding: 10px;
+      font-size: 16px;
+      margin-top: 10px;
+      width: 80%;
+      max-width: 400px;
+    }
+
+    .passos {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      padding: 20px;
+    }
+
+    .passo {
+      border-top: 1px solid #ccc;
+      padding-top: 20px;
+    }
+
+    .passo img {
+      width: 60px;
       margin-bottom: 10px;
     }
 
-    .step h3 {
-      margin: 0 0 10px;
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/NKQZ6FM.png" alt="Higor iPhones Logo">
-    <strong>Higor iPhones</strong>
+    Higor iPhones
   </header>
 
-  <div class="container">
-    <div class="title-section">
-      <h2>Compre seu smartphone sem sair de casa</h2>
-      <p>
-        Escolha a marca e modelo que deseja e veja quanto custa hoje.
-        A gente entrega diretamente na sua casa (sujeito à disponibilidade regional).
-      </p>
+  <section style="background-color: #f4f4f4;">
+    <h1>Compre seu iPhone sem sair de casa</h1>
+    <p>Escolha o modelo desejado e descubra as ofertas disponíveis. Entrega rápida e segura direto na sua casa.</p>
+  </section>
+
+  <section>
+    <h2>Comece agora a compra do seu iPhone!</h2>
+    <label for="modelo">Modelo:</label><br>
+    <select id="modelo">
+      <option>iPhone 8 Plus</option>
+      <option>iPhone X</option>
+      <option>iPhone XS</option>
+      <option>iPhone XR</option>
+      <option>iPhone 11</option>
+      <option>iPhone 11 Pro</option>
+      <option>iPhone 11 Pro Max</option>
+      <option>iPhone 12</option>
+      <option>iPhone 12 Pro</option>
+      <option>iPhone 12 Pro Max</option>
+      <option>iPhone 13</option>
+      <option>iPhone 13 Pro</option>
+      <option>iPhone 13 Pro Max</option>
+      <option>iPhone 14</option>
+      <option>iPhone 14 Pro</option>
+      <option>iPhone 14 Pro Max</option>
+      <option>iPhone 15</option>
+      <option>iPhone 15 Pro</option>
+      <option>iPhone 15 Pro Max</option>
+    </select>
+  </section>
+
+  <section class="passos">
+    <h2>Como funciona a compra na Higor iPhones:</h2>
+
+    <div class="passo">
+      <img src="https://img.icons8.com/ios-filled/100/000000/iphone.png" alt="iPhone">
+      <h3>Passo 1</h3>
+      <p>Escolha o modelo e condição do iPhone desejado para verificar a disponibilidade e o valor.</p>
     </div>
 
-    <div class="form-section">
-      <h2>Comece agora a compra do seu celular!</h2>
-      <label for="marca">Marca</label><br/>
-      <select id="marca">
-        <option>Selecione a marca</option>
-        <option>iPhone</option>
-        <option>Samsung</option>
-        <option>Xiaomi</option>
-      </select>
+    <div class="passo">
+      <img src="https://img.icons8.com/ios-filled/100/000000/money.png" alt="Pagamento">
+      <h3>Passo 2</h3>
+      <p>Complete seus dados e selecione a forma de pagamento desejada.</p>
     </div>
 
-    <div class="steps">
-      <h2>É muito fácil comprar seu smartphone com a Higor iPhones:</h2>
-      <p>Saiba como adquirir seu aparelho com segurança e sem sair de casa!</p>
-
-      <div class="step">
-        <img src="https://i.imgur.com/IQ5CLPf.png" alt="Passo 1">
-        <h3>Passo 1</h3>
-        <p>Escolha a marca, modelo e condição do smartphone desejado.</p>
-      </div>
-
-      <div class="step">
-        <img src="https://i.imgur.com/zi8eS8o.png" alt="Passo 2">
-        <h3>Passo 2</h3>
-        <p>Confirme os dados e selecione a forma de pagamento.</p>
-      </div>
-
-      <div class="step">
-        <img src="https://i.imgur.com/qG16yo3.png" alt="Passo 3">
-        <h3>Passo 3</h3>
-        <p>Receba o smartphone no conforto da sua casa.</p>
-      </div>
-
-      <div class="step">
-        <img src="https://i.imgur.com/f8X8qYf.png" alt="Passo 4">
-        <h3>Passo 4</h3>
-        <p>Aproveite seu novo celular com garantia e suporte Higor iPhones.</p>
-      </div>
+    <div class="passo">
+      <img src="https://img.icons8.com/ios-filled/100/000000/delivery.png" alt="Entrega">
+      <h3>Passo 3</h3>
+      <p>Receba seu iPhone com rapidez e segurança em sua casa.</p>
     </div>
-  </div>
+  </section>
+
+  <a href="https://wa.me/seunumeroaqui" target="_blank">
+    <img class="whatsapp" src="https://img.icons8.com/color/96/000000/whatsapp--v1.png" alt="WhatsApp">
+  </a>
 </body>
 </html>
