--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Higor iPhones</title>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Baskerville&display=swap');
-    @font-face {
-      font-family: 'Helvetica Now Condensed';
-      src: local('Helvetica Now Condensed');
-    }
 
+  <!-- Importando a fonte Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
+  <style>
+    /* Aplicando a fonte Poppins */
     body {
       margin: 0;
-      font-family: 'Helvetica Now Condensed', 'Baskerville', sans-serif;
+      font-family: 'Poppins', sans-serif;
       background-color: #ffffff;
       color: #000000;
     }
@@ -33,7 +32,8 @@
 
     h1, h2 {
       color: #000;
-      font-family: 'Baskerville', serif;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 600; /* Peso mais forte para títulos */
     }
 
     select, button {
