--- a/index.html
+++ b/index.html
@@ -66,9 +66,27 @@
       right: 20px;
       width: 60px;
     }
+
+    footer {
+      background-color: #000;
+      color: #fff;
+      text-align: center;
+      padding: 15px;
+      font-size: 14px;
+    }
+
+    footer a {
+      color: #ccc;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: #fff;
+    }
   </style>
 </head>
 <body>
+
   <header>
     Higor iPhones
   </header>
@@ -125,6 +143,48 @@
     <br>
     <button onclick="enviarWhatsApp()">Comprar</button>
   </section>
+
+  <section class="passos">
+    <h2>Como funciona a compra na Higor iPhones:</h2>
+
+    <div class="passo">
+      <img src="https://img.icons8.com/ios-filled/100/000000/iphone.png" alt="iPhone">
+      <h3>Passo 1</h3>
+      <p>Escolha o modelo e condição do iPhone desejado para verificar a disponibilidade e o valor.</p>
+    </div>
+
+    <div class="passo">
+      <img src="https://img.icons8.com/ios-filled/100/000000/money.png" alt="Pagamento">
+      <h3>Passo 2</h3>
+      <p>Complete seus dados e selecione a forma de pagamento desejada.</p>
+    </div>
+
+    <div class="passo">
+      <img src="https://img.icons8.com/ios-filled/100/000000/delivery.png" alt="Entrega">
+      <h3>Passo 3</h3>
+      <p>Receba seu iPhone com rapidez e segurança em sua casa.</p>
+    </div>
+  </section>
+
+  <section style="background-color: #f4f4f4;">
+    <h2>Sobre a Higor iPhones</h2>
+    <p>Atuamos no mercado oferecendo iPhones com procedência, qualidade e confiança. Nosso compromisso é com sua satisfação, entregando produtos testados, com garantia e atendimento personalizado.</p>
+  </section>
+
+  <section>
+    <h2>Dúvidas Frequentes</h2>
+    <p><strong>Os iPhones são novos?</strong><br>Trabalhamos com iPhones novos e seminovos em excelente estado, todos com garantia.</p>
+    <p><strong>Os produtos têm garantia?</strong><br>Sim, todos os nossos aparelhos possuem garantia mínima de 3 meses.</p>
+    <p><strong>Fazem entrega para todo o Brasil?</strong><br>Sim! Enviamos para todo o país com segurança e rastreamento.</p>
+    <p><strong>Posso parcelar no cartão?</strong><br>Sim, aceitamos pagamento via cartão com parcelamento.</p>
+  </section>
+
+  <footer>
+    <p><a href="https://instagram.com/higor_iphone" target="_blank">@higor_iphone</a> | 
+    <a href="https://wa.me/5575983467307" target="_blank">WhatsApp</a> | 
+    <a href="mailto:Higoroficialsilva01@gmail.com">Email</a></p>
+    <p>&copy; 2025 Higor iPhones</p>
+  </footer>
 
   <script>
     function mostrarEndereco() {
