--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
     footer a:hover {
       color: #fff;
     }
+
+    .bio, .faq {
+      background-color: #f4f4f4;
+      padding: 40px 20px;
+    }
+
+    .faq h4 {
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
@@ -180,6 +189,32 @@
     <button class="custom-button" onclick="enviarWhatsApp()">Comprar</button>
     <div class="buttons">
       <button class="custom-button" onclick="prevStep()">Voltar</button>
+    </div>
+  </section>
+
+  <!-- Bio -->
+  <section class="bio">
+    <h2>Sobre Higor iPhones</h2>
+    <p style="max-width: 700px; margin: auto;">
+      Com anos de experiência no mercado, a Higor iPhones é referência na venda de iPhones de qualidade, com garantia, entrega rápida e o melhor atendimento. Nossa missão é proporcionar a melhor experiência de compra com segurança e confiança. 
+    </p>
+  </section>
+
+  <!-- FAQ -->
+  <section class="faq">
+    <h2>Perguntas Frequentes</h2>
+    <div style="max-width: 800px; margin: auto; text-align: left;">
+      <h4>1. Os iPhones são novos ou seminovos?</h4>
+      <p>Trabalhamos com iPhones seminovos em excelente estado e com garantia de funcionamento.</p>
+
+      <h4>2. Posso pagar parcelado?</h4>
+      <p>Sim! Aceitamos cartão de crédito com parcelamento em até 12x.</p>
+
+      <h4>3. Vocês entregam em todo o Brasil?</h4>
+      <p>Entregamos em todo o Brasil com frete calculado conforme o CEP.</p>
+
+      <h4>4. Tem garantia?</h4>
+      <p>Sim! Todos os aparelhos têm garantia de 90 dias contra defeitos de fábrica.</p>
     </div>
   </section>
 
