--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Higor iPhones</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
     * {
       margin: 0;
@@ -15,219 +15,237 @@
     }
 
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Inter', sans-serif;
       background-color: #fff;
-      color: #000;
-    }
-
-    nav {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #000;
-      color: #fff;
-      padding: 15px 0;
-      z-index: 999;
-    }
-
-    nav ul {
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-      list-style: none;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 600;
+      color: #111;
+      line-height: 1.6;
     }
 
     header {
-      padding: 80px 20px 40px;
+      background-color: #000;
+      color: #fff;
       text-align: center;
-      background-color: #f4f4f4;
+      padding: 20px 10px;
+      font-size: 28px;
+      font-weight: 600;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    nav {
+      background-color: #f9f9f9;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      padding: 15px 10px;
+      border-bottom: 1px solid #eee;
+      font-size: 15px;
+    }
+
+    nav a {
+      text-decoration: none;
+      color: #111;
+      font-weight: 500;
+      transition: 0.3s;
+    }
+
+    nav a:hover {
+      color: #000;
     }
 
     section {
       padding: 60px 20px;
+      max-width: 800px;
+      margin: auto;
       text-align: center;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     h1, h2 {
+      font-weight: 600;
       margin-bottom: 20px;
     }
 
-    .custom-select, .custom-button {
-      padding: 12px;
-      border-radius: 8px;
-      border: none;
+    p {
       font-size: 16px;
-      margin-top: 10px;
-      width: 90%;
-      max-width: 400px;
-      font-family: 'Montserrat', sans-serif;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+      color: #444;
     }
 
-    .custom-button {
+    select, input, button {
+      margin-top: 10px;
+      padding: 12px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 15px;
+      font-family: 'Inter', sans-serif;
+      margin-bottom: 10px;
+    }
+
+    button {
       background-color: #000;
       color: #fff;
+      border: none;
       cursor: pointer;
       transition: 0.3s;
     }
 
-    .custom-button:hover {
-      background-color: #444;
+    button:hover {
+      background-color: #333;
     }
 
-    .steps {
+    .passos {
       display: flex;
       flex-direction: column;
       gap: 40px;
+      padding-top: 20px;
     }
 
-    .step img {
+    .passo {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      border-top: 1px solid #e0e0e0;
+      padding-top: 20px;
+    }
+
+    .passo img {
       width: 60px;
       margin-bottom: 10px;
     }
 
-    .cert {
-      display: flex;
-      flex-direction: column;
-      gap: 30px;
-      max-width: 700px;
-      margin: auto;
-    }
-
-    .cert img {
-      width: 50px;
-      margin-bottom: 10px;
-    }
-
     footer {
-      background-color: #000;
-      color: #fff;
+      background-color: #f5f5f5;
+      color: #666;
       text-align: center;
       padding: 30px 20px;
       font-size: 14px;
     }
 
-    a.social {
-      color: #fff;
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      z-index: 1000;
+    }
+
+    a {
+      color: inherit;
       text-decoration: none;
-      margin: 0 10px;
     }
   </style>
 </head>
 <body>
 
+  <header>Higor iPhones</header>
+
   <nav>
-    <ul>
-      <li><a href="#inicio">Início</a></li>
-      <li><a href="#comprar">Comprar</a></li>
-      <li><a href="#passos">Como Funciona</a></li>
-      <li><a href="#garantia">Garantias</a></li>
-      <li><a href="#bio">Bio</a></li>
-      <li><a href="#faq">FAQ</a></li>
-      <li><a href="#contato">Contato</a></li>
-    </ul>
+    <a href="#inicio">Início</a>
+    <a href="#comprar">Comprar</a>
+    <a href="#passos">Como Funciona</a>
+    <a href="#contato">Contato</a>
   </nav>
 
-  <header id="inicio">
-    <h1>Compre seu iPhone com segurança e rapidez</h1>
-    <p>Entrega garantida em todo o Brasil ou retire na loja física.</p>
-  </header>
+  <section id="inicio">
+    <h1>Compre seu iPhone sem sair de casa</h1>
+    <p>Escolha o modelo, consulte o valor pelo WhatsApp e receba com rapidez e segurança.</p>
+  </section>
 
   <section id="comprar">
-    <h2>Escolha seu iPhone</h2>
-    <select class="custom-select" id="modelo">
-      <option>iPhone 14 Pro Max</option>
-      <option>iPhone 14 Pro</option>
-      <option>iPhone 13 Pro Max</option>
-      <option>iPhone 12</option>
+    <h2>Inicie sua compra</h2>
+    <select id="modelo">
+      <option>iPhone 7</option>
+      <option>iPhone 7 Plus</option>
+      <option>iPhone 8</option>
+      <option>iPhone 8 Plus</option>
+      <option>iPhone X</option>
+      <option>iPhone XR</option>
+      <option>iPhone XS</option>
+      <option>iPhone XS Max</option>
       <option>iPhone 11</option>
+      <option>iPhone 11 Pro</option>
+      <option>iPhone 11 Pro Max</option>
+      <option>iPhone SE (2ª geração)</option>
+      <option>iPhone 12</option>
+      <option>iPhone 12 Mini</option>
+      <option>iPhone 12 Pro</option>
+      <option>iPhone 12 Pro Max</option>
+      <option>iPhone 13</option>
+      <option>iPhone 13 Mini</option>
+      <option>iPhone 13 Pro</option>
+      <option>iPhone 13 Pro Max</option>
+      <option>iPhone 14</option>
+      <option>iPhone 14 Plus</option>
+      <option>iPhone 14 Pro</option>
+      <option>iPhone 14 Pro Max</option>
+      <option>iPhone 15</option>
+      <option>iPhone 15 Plus</option>
+      <option>iPhone 15 Pro</option>
+      <option>iPhone 15 Pro Max</option>
     </select><br>
 
-    <select class="custom-select" id="pagamento">
+    <select id="pagamento">
       <option>Pix</option>
       <option>Cartão</option>
       <option>Boleto</option>
     </select><br>
 
-    <select class="custom-select" id="entrega">
+    <select id="entrega">
       <option>Entrega</option>
       <option>Recolha na Loja</option>
     </select><br>
 
-    <input class="custom-select" type="text" id="endereco" placeholder="Seu endereço (se entrega)" /><br>
+    <input type="text" id="endereco" placeholder="Digite seu endereço (caso escolha entrega)" /><br>
 
-    <button class="custom-button" onclick="enviarWhatsApp()">Comprar Agora</button>
+    <button onclick="enviarWhatsApp()">Comprar pelo WhatsApp</button>
   </section>
 
   <section id="passos">
-    <h2>Como funciona?</h2>
-    <div class="steps">
-      <div class="step">
-        <img src="https://img.icons8.com/ios-filled/100/000000/iphone.png" alt="Escolha">
-        <h3>1. Escolha seu iPhone</h3>
-        <p>Selecione o modelo e forma de entrega.</p>
+    <h2>Como funciona a compra:</h2>
+
+    <div class="passos">
+      <div class="passo">
+        <img src="https://img.icons8.com/ios-filled/100/000000/iphone.png" alt="Passo 1" />
+        <h3>Passo 1</h3>
+        <p>Escolha o modelo e veja o valor pelo WhatsApp.</p>
       </div>
-      <div class="step">
-        <img src="https://img.icons8.com/ios-filled/100/000000/money.png" alt="Pagamento">
-        <h3>2. Escolha o pagamento</h3>
-        <p>Pix, cartão ou boleto, do jeito que preferir.</p>
+
+      <div class="passo">
+        <img src="https://img.icons8.com/ios-filled/100/000000/money.png" alt="Passo 2" />
+        <h3>Passo 2</h3>
+        <p>Informe seus dados e selecione a forma de pagamento.</p>
       </div>
-      <div class="step">
-        <img src="https://img.icons8.com/ios-filled/100/000000/delivery.png" alt="Entrega">
-        <h3>3. Receba seu iPhone</h3>
-        <p>Entrega rápida ou recolha na loja física.</p>
+
+      <div class="passo">
+        <img src="https://img.icons8.com/ios-filled/100/000000/delivery.png" alt="Passo 3" />
+        <h3>Passo 3</h3>
+        <p>Receba seu iPhone com rapidez ou retire na loja.</p>
       </div>
     </div>
-  </section>
-
-  <section id="garantia" style="background:#f4f4f4;">
-    <h2>Garantias e Segurança</h2>
-    <div class="cert">
-      <div>
-        <img src="https://img.icons8.com/ios-filled/100/000000/guarantee.png" />
-        <p><strong>90 dias de garantia</strong> contra defeitos.</p>
-      </div>
-      <div>
-        <img src="https://img.icons8.com/ios-filled/100/000000/lock.png" />
-        <p><strong>Pagamento 100% seguro</strong> com Pix, cartão ou boleto.</p>
-      </div>
-      <div>
-        <img src="https://img.icons8.com/ios-filled/100/000000/verified-account.png" />
-        <p><strong>Loja verificada</strong> com dezenas de avaliações positivas.</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="bio">
-    <h2>Quem é Higor iPhones?</h2>
-    <p>Atuando no mercado de revenda de iPhones com foco em qualidade, confiança e atendimento. Enviamos para todo o Brasil com garantia e suporte personalizado.</p>
-  </section>
-
-  <section id="faq">
-    <h2>Perguntas Frequentes</h2>
-    <p><strong>Como faço o pagamento?</strong><br>Você escolhe entre Pix, Cartão ou Boleto.</p>
-    <p><strong>Quanto tempo leva para receber?</strong><br>Prazo de entrega médio é de 1 a 4 dias úteis.</p>
-    <p><strong>Tem garantia?</strong><br>Sim! Todos os iPhones têm 90 dias de garantia contra defeitos de fábrica.</p>
   </section>
 
   <section id="contato">
-    <h2>Fale com a gente</h2>
-    <p><a href="https://www.instagram.com/higor_iphone" target="_blank">@higor_iphone</a></p>
-    <p><a href="mailto:Higoroficialsilva01@gmail.com">Higoroficialsilva01@gmail.com</a></p>
-    <p><a href="https://wa.me/5575983467307" target="_blank">WhatsApp: (75) 98346-7307</a></p>
+    <h2>Entre em contato</h2>
+    <p>Instagram: <a href="https://instagram.com/higor_iphone" target="_blank">@higor_iphone</a></p>
+    <p>WhatsApp: <a href="https://wa.me/5575983467307" target="_blank">(75) 98346-7307</a></p>
+    <p>Email: <a href="mailto:Higoroficialsilva01@gmail.com">Higoroficialsilva01@gmail.com</a></p>
   </section>
 
   <footer>
-    &copy; 2025 Higor iPhones — Todos os direitos reservados<br />
-    <a href="https://www.instagram.com/higor_iphone" class="social">Instagram</a> | 
-    <a href="mailto:Higoroficialsilva01@gmail.com" class="social">E-mail</a>
+    <p>&copy; 2025 Higor iPhones. Todos os direitos reservados.</p>
   </footer>
+
+  <a href="https://wa.me/5575983467307" target="_blank">
+    <img class="whatsapp" src="https://img.icons8.com/color/96/000000/whatsapp--v1.png" alt="WhatsApp" />
+  </a>
 
   <script>
     function enviarWhatsApp() {
@@ -241,7 +259,7 @@
       mensagem += `Opção de entrega: *${entrega}*%0A`;
 
       if (entrega === 'Entrega' && endereco.trim() !== '') {
-        mensagem += `Endereço: ${endereco}%0A`;
+        mensagem += `Endereço para entrega: ${endereco}%0A`;
       }
 
       const numero = '5575983467307';
@@ -249,5 +267,6 @@
       window.open(url, '_blank');
     }
   </script>
+
 </body>
 </html>
