--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Higor iPhones</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
@@ -16,95 +16,111 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #fff;
+      background: #fff;
       color: #111;
-      line-height: 1.6;
+      line-height: 1.5;
     }
 
     header {
-      background-color: #000;
+      background: #000;
       color: #fff;
       text-align: center;
-      padding: 20px 10px;
-      font-size: 28px;
-      font-weight: 600;
+      padding: 15px 10px;
       position: sticky;
       top: 0;
       z-index: 100;
     }
 
-    nav {
-      background-color: #f9f9f9;
+    .logo {
       display: flex;
       justify-content: center;
-      gap: 30px;
-      padding: 15px 10px;
-      border-bottom: 1px solid #eee;
-      font-size: 15px;
+      align-items: center;
+      flex-direction: column;
+      line-height: 1.1;
+    }
+
+    .logo h1 {
+      font-weight: 700;
+      font-size: 24px;
+    }
+
+    .logo p {
+      font-weight: 400;
+      font-size: 14px;
+    }
+
+    .logo img {
+      width: 20px;
+      margin-top: 5px;
+    }
+
+    nav {
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      gap: 25px;
+      font-size: 14px;
+      padding: 10px 0;
     }
 
     nav a {
-      text-decoration: none;
       color: #111;
+      text-decoration: none;
       font-weight: 500;
-      transition: 0.3s;
-    }
-
-    nav a:hover {
-      color: #000;
     }
 
     section {
-      padding: 60px 20px;
+      padding: 30px 20px;
       max-width: 800px;
       margin: auto;
       text-align: center;
-      animation: fadeIn 0.6s ease-in-out;
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    h1, h2 {
+    h2 {
+      font-size: 20px;
       font-weight: 600;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
     p {
-      font-size: 16px;
+      font-size: 15px;
       color: #444;
     }
 
     select, input, button {
       margin-top: 10px;
-      padding: 12px;
+      padding: 12px 14px;
       width: 90%;
       max-width: 400px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
+      border: 1px solid #ddd;
+      border-radius: 8px;
       font-size: 15px;
       font-family: 'Inter', sans-serif;
-      margin-bottom: 10px;
+      transition: 0.3s;
+      appearance: none;
+    }
+
+    select {
+      background: #fdfdfd url('https://img.icons8.com/ios-glyphs/30/000000/expand-arrow.png') no-repeat right 12px center;
+      background-size: 12px;
     }
 
     button {
-      background-color: #000;
+      background: #000;
       color: #fff;
+      font-weight: 500;
       border: none;
       cursor: pointer;
-      transition: 0.3s;
     }
 
     button:hover {
-      background-color: #333;
+      background: #222;
     }
 
     .passos {
       display: flex;
       flex-direction: column;
-      gap: 40px;
+      gap: 30px;
       padding-top: 20px;
     }
 
@@ -112,21 +128,19 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      border-top: 1px solid #e0e0e0;
-      padding-top: 20px;
     }
 
     .passo img {
-      width: 60px;
+      width: 50px;
       margin-bottom: 10px;
     }
 
     footer {
-      background-color: #f5f5f5;
-      color: #666;
+      background: #f5f5f5;
       text-align: center;
-      padding: 30px 20px;
+      padding: 20px;
       font-size: 14px;
+      color: #555;
     }
 
     .whatsapp {
@@ -138,24 +152,58 @@
     }
 
     a {
-      color: inherit;
       text-decoration: none;
+      color: inherit;
     }
+
+    .faq {
+      text-align: left;
+      margin-top: 20px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .faq-item {
+      margin-bottom: 15px;
+      font-size: 16px;
+      font-weight: 600;
+    }
+
+    .faq-item p {
+      font-size: 14px;
+      color: #444;
+    }
+
+    .garantia {
+      text-align: left;
+      max-width: 800px;
+      margin: auto;
+      font-size: 16px;
+    }
+
   </style>
 </head>
 <body>
 
-  <header>Higor iPhones</header>
+  <header>
+    <div class="logo">
+      <h1>Higor</h1>
+      <p>iPhones</p>
+      <img src="https://img.icons8.com/ios-filled/50/ffffff/mac-os.png" alt="Apple">
+    </div>
+  </header>
 
   <nav>
     <a href="#inicio">Início</a>
     <a href="#comprar">Comprar</a>
     <a href="#passos">Como Funciona</a>
+    <a href="#garantia">Garantia</a>
+    <a href="#faq">FAQ</a>
     <a href="#contato">Contato</a>
   </nav>
 
   <section id="inicio">
-    <h1>Compre seu iPhone sem sair de casa</h1>
+    <h2>Compre seu iPhone sem sair de casa</h2>
     <p>Escolha o modelo, consulte o valor pelo WhatsApp e receba com rapidez e segurança.</p>
   </section>
 
@@ -203,40 +251,61 @@
       <option>Recolha na Loja</option>
     </select><br>
 
-    <input type="text" id="endereco" placeholder="Digite seu endereço (caso escolha entrega)" /><br>
+    <input type="text" id="endereco" placeholder="Endereço (se entrega)" /><br>
 
     <button onclick="enviarWhatsApp()">Comprar pelo WhatsApp</button>
   </section>
 
   <section id="passos">
-    <h2>Como funciona a compra:</h2>
-
+    <h2>Como funciona a compra</h2>
     <div class="passos">
       <div class="passo">
         <img src="https://img.icons8.com/ios-filled/100/000000/iphone.png" alt="Passo 1" />
-        <h3>Passo 1</h3>
         <p>Escolha o modelo e veja o valor pelo WhatsApp.</p>
       </div>
-
       <div class="passo">
         <img src="https://img.icons8.com/ios-filled/100/000000/money.png" alt="Passo 2" />
-        <h3>Passo 2</h3>
         <p>Informe seus dados e selecione a forma de pagamento.</p>
       </div>
-
       <div class="passo">
         <img src="https://img.icons8.com/ios-filled/100/000000/delivery.png" alt="Passo 3" />
-        <h3>Passo 3</h3>
         <p>Receba seu iPhone com rapidez ou retire na loja.</p>
       </div>
     </div>
   </section>
 
+  <section id="garantia">
+    <h2>Garantia</h2>
+    <div class="garantia">
+      <p>Todos os iPhones vendidos pela Higor iPhones possuem garantia de 1 ano, válida para defeitos de fabricação. A garantia cobre reparos em peças e serviços relacionados à falhas internas e externas não causadas por mau uso. O prazo de garantia começa a contar a partir da data de compra e é válida para o proprietário original do produto.</p>
+    </div>
+  </section>
+
+  <section id="faq">
+    <h2>FAQ - Perguntas Frequentes</h2>
+    <div class="faq">
+      <div class="faq-item">
+        <p><strong>1. Como posso saber o valor do iPhone?</strong></p>
+        <p>O valor é consultado diretamente pelo WhatsApp, onde você pode obter a cotação e tirar todas as suas dúvidas.</p>
+      </div>
+      <div class="faq-item">
+        <p><strong>2. Posso pagar parcelado?</strong></p>
+        <p>Sim! Aceitamos pagamento via cartão de crédito, boleto ou Pix.</p>
+      </div>
+      <div class="faq-item">
+        <p><strong>3. Qual é o prazo de entrega?</strong></p>
+        <p>O prazo de entrega depende da sua localidade, mas garantimos um processo rápido e seguro.</p>
+      </div>
+      <div class="faq-item">
+        <p><strong>4. Como faço para retirar na loja?</strong></p>
+        <p>Escolha a opção "Recolha na Loja" ao realizar a compra. Você receberá as instruções para a retirada.</p>
+      </div>
+    </div>
+  </section>
+
   <section id="contato">
-    <h2>Entre em contato</h2>
-    <p>Instagram: <a href="https://instagram.com/higor_iphone" target="_blank">@higor_iphone</a></p>
-    <p>WhatsApp: <a href="https://wa.me/5575983467307" target="_blank">(75) 98346-7307</a></p>
-    <p>Email: <a href="mailto:Higoroficialsilva01@gmail.com">Higoroficialsilva01@gmail.com</a></p>
+    <h2>Contato</h2>
+    <p>Instagram | WhatsApp | Email</p>
   </section>
 
   <footer>
